--- a/Android/ProyectoADBJ/app/src/main/res/values/strings.xml
+++ b/Android/ProyectoADBJ/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">ProyectoADBJ</string>
+    <string-array name="Planes">
+        <item>Plan Economico</item>
+        <item>Plan Comun</item>
+        <item>Plan Completo</item>
+    </string-array>
 </resources>
