--- a/Android/ProyectoADBJ/app/src/main/res/values/strings.xml
+++ b/Android/ProyectoADBJ/app/src/main/res/values/strings.xml
@@ -12,4 +12,10 @@
         <item>Transferencia</item>
         <item>Efectivo</item>
     </string-array>
+    <string name="title_activity_dashboard">Dashboard</string>
+    <string name="tab_text_1">Tab 1</string>
+    <string name="tab_text_2">Tab 2</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
