--- a/ProyectoADBJ/app/src/main/res/values/strings.xml
+++ b/ProyectoADBJ/app/src/main/res/values/strings.xml
@@ -18,4 +18,10 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="tabUser">Este el tab del user.</string>
+    <string name="tabStats">Aqui estadísticas personales</string>
+    <string name="tabClases">Aqui se agendan/revisan clases.</string>
+    <string name="tabTrainers">Aqui consultas trainers y agendas con ellos</string>
+    <string name="tabMaquinas">Aqui se muestran las máquinas y consejos para su uso</string>
+
 </resources>
