Agregada funcionalidad de calendario y filtro de calendario, resta capacidad de unirse a actividad o salirse

--- a/ProyectoADBJ/app/src/main/res/values/strings.xml
+++ b/ProyectoADBJ/app/src/main/res/values/strings.xml
@@ -34,11 +34,7 @@
 
 
     <string-array name="clases">
-        <item>Yoga</item>
-        <item>Cardio</item>
-        <item>Crossfit</item>
-        <item>Boxeo</item>
-        <item>Lucha Libre</item>
+        <item>No existen eventos</item>
     </string-array>
 
 
