Mejorado listview de eventos disponibles,falta filtrado por training y evento long click para registrar

--- a/ProyectoADBJ/app/src/main/res/values/strings.xml
+++ b/ProyectoADBJ/app/src/main/res/values/strings.xml
@@ -34,7 +34,7 @@
 
 
     <string-array name="clases">
-        <item>No existen eventos</item>
+        <item>Sin data</item>
     </string-array>
 
 
